# pdelib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/geometry/: CMakeLists.txt  geometry.cpp  geometry.h
tests/: CMakeLists.txt  Poisson_1D.cpp
